--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,88 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C80E11"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <!-- Title  + player -->
+    <RelativeLayout
+        android:id="@+id/topBar"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="#FFFFFF"
+        android:padding="10dp">
 
+        <!-- Title Text -->
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Yahtzee Extreme"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true" />
 
-    <!-- Dice Roll -->
+        <!-- Player Score Table -->
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true">
+
+            <TableRow>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Your current score:"
+                    android:padding="8dp"
+                    android:textColor="#000000" />
+            </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:gravity="center_horizontal"
+                    android:textColor="#000000" />
+            </TableRow>
+
+        </TableLayout>
+
+</RelativeLayout>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#B8BABABA"
+        >
+
+        <TableRow>
+            <TextView
+                android:layout_width="215dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="Player 1"
+                android:textColor="#000000" />
+
+            <TextView
+                android:layout_width="195dp"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Player 2"
+                android:gravity="center"
+                android:textColor="#000000" />
+        </TableRow>
+
+    </TableLayout>
 
     <TextView
         android:id="@+id/rollInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:text="You have 2 rolling attempts left!"
         android:textColor="#FFFFFF"
         android:textSize="16sp" />
@@ -26,7 +94,7 @@
         android:id="@+id/diceLayoutTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -49,7 +117,7 @@
         android:id="@+id/diceLayoutMiddle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -66,7 +134,7 @@
         android:id="@+id/diceLayoutBottom"
         android:layout_width="match_parent"
         android:layout_height="58dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -91,11 +159,14 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="32dp"
         android:text="Shake to roll!"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginBottom="10dp"/>
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        >
 
         <TableRow>
             <TextView
