--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
 
             <TableRow>
                 <TextView
+                    android:id="@+id/highScore"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
